--- a/itis3135/natureinshutterspeed/east_gallery.html
+++ b/itis3135/natureinshutterspeed/east_gallery.html
@@ -4,6 +4,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Eastern U.S. Gallery - Nature In Shutter Speed</title>
   <link rel="stylesheet" href="styles/styles.css" />
+  <link href="https://cdn.jsdelivr.net/npm/lightbox2@2/dist/css/lightbox.min.css" rel="stylesheet" />
 </head>
 <body>
   <header>
@@ -12,30 +13,30 @@
   <main>
     <h2 class="intro">Gallery: Eastern United States</h2>
     <section class="gallery-grid">
-      <img src="images/eastern/beach.jpg" alt="Beach scene" loading="lazy" />
-      <img src="images/eastern/beach2.jpg" alt="Beach view 2" loading="lazy" />
-      <img src="images/eastern/bridges.jpg" alt="Bridges" loading="lazy" />
-      <img src="images/eastern/creek.jpg" alt="Creek" loading="lazy" />
-      <img src="images/eastern/discatlake.jpg" alt="Disc golf by lake" loading="lazy" />
-      <img src="images/eastern/helmet.jpg" alt="Helmet mosaic" loading="lazy" />
-      <img src="images/eastern/lighthous.jpg" alt="Lighthouse" loading="lazy" />
-      <img src="images/eastern/me1.jpg" alt="Hiking in woods" loading="lazy" />
-      <img src="images/eastern/me2.jpg" alt="Snowy trail" loading="lazy" />
-      <img src="images/eastern/me3.jpg" alt="Bridge crossing" loading="lazy" />
-      <img src="images/eastern/me6.jpg" alt="Pathway" loading="lazy" />
-      <img src="images/eastern/merica.jpg" alt="Flag scene" loading="lazy" />
-      <img src="images/eastern/ne1.jpg" alt="New England 1" loading="lazy" />
-      <img src="images/eastern/ne2.jpg" alt="New England 2" loading="lazy" />
-      <img src="images/eastern/newOr1.jpg" alt="New Orleans 1" loading="lazy" />
-      <img src="images/eastern/newOr2.jpg" alt="New Orleans 2" loading="lazy" />
-      <img src="images/eastern/newOr3.jpg" alt="New Orleans 3" loading="lazy" />
-      <img src="images/eastern/newOr4.jpg" alt="New Orleans 4" loading="lazy" />
-      <img src="images/eastern/ny1.jpg" alt="New York 1" loading="lazy" />
-      <img src="images/eastern/ny2.jpg" alt="New York 2" loading="lazy" />
-      <img src="images/eastern/paintedrocks.jpg" alt="Painted Rocks Lakeshore" loading="lazy" />
-      <img src="images/eastern/panthers.jpg" alt="Panthers game" loading="lazy" />
-      <img src="images/eastern/stlouisarch.jpg" alt="St. Louis Arch" loading="lazy" />
-      <img src="images/eastern/stlouisarch2.jpg" alt="St. Louis Arch night" loading="lazy" />
+      <a href="images/eastern/beach.jpg" data-lightbox="east-gallery"><img src="images/east/beach.jpg" alt="Beach" loading="lazy" /></a>
+      <a href="images/eastern/beach2.jpg" data-lightbox="east-gallery"><img src="images/east/beach2.jpg" alt="Beach 2" loading="lazy" /></a>
+      <a href="images/eastern/bridges.jpg" data-lightbox="east-gallery"><img src="images/east/bridges.jpg" alt="Bridges" loading="lazy" /></a>
+      <a href="images/eastern/creek.jpg" data-lightbox="east-gallery"><img src="images/east/creek.jpg" alt="Creek" loading="lazy" /></a>
+      <a href="images/eastern/discatlake.jpg" data-lightbox="east-gallery"><img src="images/east/discatlake.jpg" alt="Disc Golf Lake" loading="lazy" /></a>
+      <a href="images/eastern/helmet.jpg" data-lightbox="east-gallery"><img src="images/east/helmet.jpg" alt="Helmet" loading="lazy" /></a>
+      <a href="images/eastern/lighthous.jpg" data-lightbox="east-gallery"><img src="images/east/lighthous.jpg" alt="Lighthouse" loading="lazy" /></a>
+      <a href="images/eastern/me1.jpg" data-lightbox="east-gallery"><img src="images/east/me1.jpg" alt="Me 1" loading="lazy" /></a>
+      <a href="images/eastern/me2.jpg" data-lightbox="east-gallery"><img src="images/east/me2.jpg" alt="Me 2" loading="lazy" /></a>
+      <a href="images/eastern/me3.jpg" data-lightbox="east-gallery"><img src="images/east/me3.jpg" alt="Me 3" loading="lazy" /></a>
+      <a href="images/eastern/me6.jpg" data-lightbox="east-gallery"><img src="images/east/me6.jpg" alt="Me 6" loading="lazy" /></a>
+      <a href="images/eastern/merica.jpg" data-lightbox="east-gallery"><img src="images/east/merica.jpg" alt="America" loading="lazy" /></a>
+      <a href="images/eastern/ne1.jpg" data-lightbox="east-gallery"><img src="images/east/ne1.jpg" alt="New England 1" loading="lazy" /></a>
+      <a href="images/eastern/ne2.jpg" data-lightbox="east-gallery"><img src="images/east/ne2.jpg" alt="New England 2" loading="lazy" /></a>
+      <a href="images/eastern/newOr1.jpg" data-lightbox="east-gallery"><img src="images/east/newOr1.jpg" alt="New Orleans 1" loading="lazy" /></a>
+      <a href="images/eastern/newOr2.jpg" data-lightbox="east-gallery"><img src="images/east/newOr2.jpg" alt="New Orleans 2" loading="lazy" /></a>
+      <a href="images/eastern/newOr3.jpg" data-lightbox="east-gallery"><img src="images/east/newOr3.jpg" alt="New Orleans 3" loading="lazy" /></a>
+      <a href="images/eastern/newOr4.jpg" data-lightbox="east-gallery"><img src="images/east/newOr4.jpg" alt="New Orleans 4" loading="lazy" /></a>
+      <a href="images/eastern/ny1.jpg" data-lightbox="east-gallery"><img src="images/east/ny1.jpg" alt="New York 1" loading="lazy" /></a>
+      <a href="images/eastern/ny2.jpg" data-lightbox="east-gallery"><img src="images/east/ny2.jpg" alt="New York 2" loading="lazy" /></a>
+      <a href="images/eastern/paintedrocks.jpg" data-lightbox="east-gallery"><img src="images/east/paintedrocks.jpg" alt="Painted Rocks" loading="lazy" /></a>
+      <a href="images/eastern/panthers.jpg" data-lightbox="east-gallery"><img src="images/east/panthers.jpg" alt="Panthers" loading="lazy" /></a>
+      <a href="images/eastern/stlouisarch.jpg" data-lightbox="east-gallery"><img src="images/east/stlouisarch.jpg" alt="St. Louis Arch" loading="lazy" /></a>
+      <a href="images/eastern/stlouisarch2.jpg" data-lightbox="east-gallery"><img src="images/east/stlouisarch2.jpg" alt="St. Louis Arch Night" loading="lazy" /></a>
     </section>
     
   </main>
@@ -44,5 +45,6 @@
   </footer>
   <script src="scripts/HTMLInclude.js">
   </script>
+  <script src="https://cdn.jsdelivr.net/npm/lightbox2@2/dist/js/lightbox.min.js"></script>
 </body>
 </html>
