--- a/itis3135/natureinshutterspeed/west_gallery.html
+++ b/itis3135/natureinshutterspeed/west_gallery.html
@@ -13,71 +13,71 @@
   <main>
     <h2 class="intro">Gallery: Western United States</h2>
     <section class="gallery-grid">
-      <a href="images/western/ariz1.JPG" data-lightbox="west-gallery"><img src="images/west/ariz1.JPG" alt="Arizona 1" loading="lazy" /></a>
-      <a href="images/western/ariz4.JPG" data-lightbox="west-gallery"><img src="images/west/ariz4.JPG" alt="Arizona 4" loading="lazy" /></a>
-      <a href="images/western/ariz5.JPG" data-lightbox="west-gallery"><img src="images/west/ariz5.JPG" alt="Arizona 5" loading="lazy" /></a>
-      <a href="images/western/ariz6.jpg" data-lightbox="west-gallery"><img src="images/west/ariz6.jpg" alt="Arizona 6" loading="lazy" /></a>
-      <a href="images/western/arizss.jpg" data-lightbox="west-gallery"><img src="images/west/arizss.jpg" alt="Arizona Sunset" loading="lazy" /></a>
-      <a href="images/western/badland2.JPG" data-lightbox="west-gallery"><img src="images/west/badland2.JPG" alt="Badlands 2" loading="lazy" /></a>
-      <a href="images/western/badland3.JPG" data-lightbox="west-gallery"><img src="images/west/badland3.JPG" alt="Badlands 3" loading="lazy" /></a>
-      <a href="images/western/badland4.JPG" data-lightbox="west-gallery"><img src="images/west/badland4.JPG" alt="Badlands 4" loading="lazy" /></a>
-      <a href="images/western/badland5.jpg" data-lightbox="west-gallery"><img src="images/west/badland5.jpg" alt="Badlands Road" loading="lazy" /></a>
-      <a href="images/western/badland1.JPG" data-lightbox="west-gallery"><img src="images/west/badland1.JPG" alt="Badlands Sign" loading="lazy" /></a>
-      <a href="images/western/cooltrees.JPG" data-lightbox="west-gallery"><img src="images/west/cooltrees.JPG" alt="Cool Trees" loading="lazy" /></a>
-      <a href="images/western/field.jpg" data-lightbox="west-gallery"><img src="images/west/field.jpg" alt="Field" loading="lazy" /></a>
-      <a href="images/western/glacier1.JPG" data-lightbox="west-gallery"><img src="images/west/glacier1.JPG" alt="Glacier 1" loading="lazy" /></a>
-      <a href="images/western/glacier2.JPG" data-lightbox="west-gallery"><img src="images/west/glacier2.JPG" alt="Glacier 2" loading="lazy" /></a>
-      <a href="images/western/glacier3.JPG" data-lightbox="west-gallery"><img src="images/west/glacier3.JPG" alt="Glacier 3" loading="lazy" /></a>
-      <a href="images/western/glacier4.JPG" data-lightbox="west-gallery"><img src="images/west/glacier4.JPG" alt="Glacier 4" loading="lazy" /></a>
-      <a href="images/western/glacier5.JPG" data-lightbox="west-gallery"><img src="images/west/glacier5.JPG" alt="Glacier 5" loading="lazy" /></a>
-      <a href="images/western/glamping.jpg" data-lightbox="west-gallery"><img src="images/west/glamping.jpg" alt="Glamping" loading="lazy" /></a>
-      <a href="images/western/grandcan1.JPG" data-lightbox="west-gallery"><img src="images/west/grandcan1.JPG" alt="Grand Canyon 1" loading="lazy" /></a>
-      <a href="images/western/grandcan2.JPG" data-lightbox="west-gallery"><img src="images/west/grandcan2.JPG" alt="Grand Canyon 2" loading="lazy" /></a>
-      <a href="images/western/grandcan4.JPG" data-lightbox="west-gallery"><img src="images/west/grandcan4.JPG" alt="Grand Canyon 4" loading="lazy" /></a>
-      <a href="images/western/horshoebend.jpg" data-lightbox="west-gallery"><img src="images/west/horshoebend.jpg" alt="Horseshoe Bend" loading="lazy" /></a>
-      <a href="images/western/kayakpic.jpg" data-lightbox="west-gallery"><img src="images/west/kayakpic.jpg" alt="Kayaking" loading="lazy" /></a>
-      <a href="images/western/longroad.JPG" data-lightbox="west-gallery"><img src="images/west/longroad.JPG" alt="Long Road" loading="lazy" /></a>
-      <a href="images/western/me4.JPG" data-lightbox="west-gallery"><img src="images/west/me4.JPG" alt="Me 4" loading="lazy" /></a>
-      <a href="images/western/me5.JPG" data-lightbox="west-gallery"><img src="images/west/me5.JPG" alt="Me 5" loading="lazy" /></a>
-      <a href="images/western/mg2.JPG" data-lightbox="west-gallery"><img src="images/west/mg2.JPG" alt="MG 2" loading="lazy" /></a>
-      <a href="images/western/mg3.JPG" data-lightbox="west-gallery"><img src="images/west/mg3.JPG" alt="MG 3" loading="lazy" /></a>
-      <a href="images/western/monument.JPG" data-lightbox="west-gallery"><img src="images/west/monument.JPG" alt="Monument Valley" loading="lazy" /></a>
-      <a href="images/western/national.JPG" data-lightbox="west-gallery"><img src="images/west/national.JPG" alt="National Park" loading="lazy" /></a>
-      <a href="images/western/pacific1.JPG" data-lightbox="west-gallery"><img src="images/west/pacific1.JPG" alt="Pacific 1" loading="lazy" /></a>
-      <a href="images/western/pacific2.JPG" data-lightbox="west-gallery"><img src="images/west/pacific2.JPG" alt="Pacific 2" loading="lazy" /></a>
-      <a href="images/western/pacific3.JPG" data-lightbox="west-gallery"><img src="images/west/pacific3.JPG" alt="Pacific 3" loading="lazy" /></a>
-      <a href="images/western/pacific4.JPG" data-lightbox="west-gallery"><img src="images/west/pacific4.JPG" alt="Pacific 4" loading="lazy" /></a>
-      <a href="images/western/pacific5.JPG" data-lightbox="west-gallery"><img src="images/west/pacific5.JPG" alt="Pacific 5" loading="lazy" /></a>
-      <a href="images/western/pacific6.JPG" data-lightbox="west-gallery"><img src="images/west/pacific6.JPG" alt="Pacific 6" loading="lazy" /></a>
-      <a href="images/western/pacific7.JPG" data-lightbox="west-gallery"><img src="images/west/pacific7.JPG" alt="Pacific 7" loading="lazy" /></a>
-      <a href="images/western/rainbow.jpg" data-lightbox="west-gallery"><img src="images/west/rainbow.jpg" alt="Rainbow" loading="lazy" /></a>
-      <a href="images/western/redwood1.jpg" data-lightbox="west-gallery"><img src="images/west/redwood1.jpg" alt="Redwood 1" loading="lazy" /></a>
-      <a href="images/western/redwood2.jpg" data-lightbox="west-gallery"><img src="images/west/redwood2.jpg" alt="Redwood 2" loading="lazy" /></a>
-      <a href="images/western/river.JPG" data-lightbox="west-gallery"><img src="images/west/river.JPG" alt="River" loading="lazy" /></a>
-      <a href="images/western/suguaro.JPG" data-lightbox="west-gallery"><img src="images/west/suguaro.JPG" alt="Saguaro" loading="lazy" /></a>
-      <a href="images/western/teton1.JPG" data-lightbox="west-gallery"><img src="images/west/teton1.JPG" alt="Teton 1" loading="lazy" /></a>
-      <a href="images/western/teton2.JPG" data-lightbox="west-gallery"><img src="images/west/teton2.JPG" alt="Teton 2" loading="lazy" /></a>
-      <a href="images/western/teton3.JPG" data-lightbox="west-gallery"><img src="images/west/teton3.JPG" alt="Teton 3" loading="lazy" /></a>
-      <a href="images/western/teton4.JPG" data-lightbox="west-gallery"><img src="images/west/teton4.JPG" alt="Teton 4" loading="lazy" /></a>
-      <a href="images/western/theplanes.jpg" data-lightbox="west-gallery"><img src="images/west/theplanes.jpg" alt="The Plains" loading="lazy" /></a>
-      <a href="images/western/trex.JPG" data-lightbox="west-gallery"><img src="images/west/trex.JPG" alt="T-Rex" loading="lazy" /></a>
-      <a href="images/western/truckinbadland.jpg" data-lightbox="west-gallery"><img src="images/west/truckinbadland.jpg" alt="Truck in Badlands" loading="lazy" /></a>
-      <a href="images/western/Utah.JPG" data-lightbox="west-gallery"><img src="images/west/Utah.JPG" alt="Utah" loading="lazy" /></a>
-      <a href="images/western/utah1.JPG" data-lightbox="west-gallery"><img src="images/west/utah1.JPG" alt="Utah 1" loading="lazy" /></a>
-      <a href="images/western/utah2.JPG" data-lightbox="west-gallery"><img src="images/west/utah2.JPG" alt="Utah 2" loading="lazy" /></a>
-      <a href="images/western/utah3.JPG" data-lightbox="west-gallery"><img src="images/west/utah3.JPG" alt="Utah 3" loading="lazy" /></a>
-      <a href="images/western/utah4.JPG" data-lightbox="west-gallery"><img src="images/west/utah4.JPG" alt="Utah 4" loading="lazy" /></a>
-      <a href="images/western/utah5.JPG" data-lightbox="west-gallery"><img src="images/west/utah5.JPG" alt="Utah 5" loading="lazy" /></a>
-      <a href="images/western/winter (1).jpg" data-lightbox="west-gallery"><img src="images/west/winter (1).jpg" alt="Winter" loading="lazy" /></a>
-      <a href="images/western/yellowstone1.JPG" data-lightbox="west-gallery"><img src="images/west/yellowstone1.JPG" alt="Yellowstone 1" loading="lazy" /></a>
-      <a href="images/western/yellowstone2.JPG" data-lightbox="west-gallery"><img src="images/west/yellowstone2.JPG" alt="Yellowstone 2" loading="lazy" /></a>
-      <a href="images/western/yellowstone3.JPG" data-lightbox="west-gallery"><img src="images/west/yellowstone3.JPG" alt="Yellowstone 3" loading="lazy" /></a>
-      <a href="images/western/yellowstone4.JPG" data-lightbox="west-gallery"><img src="images/west/yellowstone4.JPG" alt="Yellowstone 4" loading="lazy" /></a>
-      <a href="images/western/yellowstone5.JPG" data-lightbox="west-gallery"><img src="images/west/yellowstone5.JPG" alt="Yellowstone 5" loading="lazy" /></a>
-      <a href="images/western/yellowstone6.JPG" data-lightbox="west-gallery"><img src="images/west/yellowstone6.JPG" alt="Yellowstone 6" loading="lazy" /></a>
-      <a href="images/western/yellowstone7.JPG" data-lightbox="west-gallery"><img src="images/west/yellowstone7.JPG" alt="Yellowstone 7" loading="lazy" /></a>
-      <a href="images/western/yellowstone8.JPG" data-lightbox="west-gallery"><img src="images/west/yellowstone8.JPG" alt="Yellowstone 8" loading="lazy" /></a>
-      <a href="images/western/yellowstone9.JPG" data-lightbox="west-gallery"><img src="images/west/yellowstone9.JPG" alt="Yellowstone 9" loading="lazy" /></a>
+      <a href="images/western/ariz1.JPG" data-lightbox="west-gallery"><img src="images/west/ariz1.jpg" alt="ariz1" loading="lazy" /></a>
+      <a href="images/western/ariz4.JPG" data-lightbox="west-gallery"><img src="images/west/ariz4.jpg" alt="ariz4" loading="lazy" /></a>
+      <a href="images/western/ariz5.JPG" data-lightbox="west-gallery"><img src="images/west/ariz5.jpg" alt="ariz5" loading="lazy" /></a>
+      <a href="images/western/ariz6.jpg" data-lightbox="west-gallery"><img src="images/west/ariz6.jpg" alt="ariz6" loading="lazy" /></a>
+      <a href="images/western/arizss.JPG" data-lightbox="west-gallery"><img src="images/west/arizss.jpg" alt="arizss" loading="lazy" /></a>
+      <a href="images/western/badland1.JPG" data-lightbox="west-gallery"><img src="images/west/badland1.jpg" alt="badland1" loading="lazy" /></a>
+      <a href="images/western/badland2.JPG" data-lightbox="west-gallery"><img src="images/west/badland2.jpg" alt="badland2" loading="lazy" /></a>
+      <a href="images/western/badland3.JPG" data-lightbox="west-gallery"><img src="images/west/badland3.jpg" alt="badland3" loading="lazy" /></a>
+      <a href="images/western/badland4.JPG" data-lightbox="west-gallery"><img src="images/west/badland4.jpg" alt="badland4" loading="lazy" /></a>
+      <a href="images/western/badland5.jpg" data-lightbox="west-gallery"><img src="images/west/badland5.jpg" alt="badland5" loading="lazy" /></a>
+      <a href="images/western/cooltrees.JPG" data-lightbox="west-gallery"><img src="images/west/cooltrees.jpg" alt="cooltrees" loading="lazy" /></a>
+      <a href="images/western/field.jpg" data-lightbox="west-gallery"><img src="images/west/field.jpg" alt="field" loading="lazy" /></a>
+      <a href="images/western/glacier1.JPG" data-lightbox="west-gallery"><img src="images/west/glacier1.jpg" alt="glacier1" loading="lazy" /></a>
+      <a href="images/western/glacier2.JPG" data-lightbox="west-gallery"><img src="images/west/glacier2.jpg" alt="glacier2" loading="lazy" /></a>
+      <a href="images/western/glacier3.JPG" data-lightbox="west-gallery"><img src="images/west/glacier3.jpg" alt="glacier3" loading="lazy" /></a>
+      <a href="images/western/glacier4.JPG" data-lightbox="west-gallery"><img src="images/west/glacier4.jpg" alt="glacier4" loading="lazy" /></a>
+      <a href="images/western/glacier5.JPG" data-lightbox="west-gallery"><img src="images/west/glacier5.jpg" alt="glacier5" loading="lazy" /></a>
+      <a href="images/western/glamping.jpg" data-lightbox="west-gallery"><img src="images/west/glamping.jpg" alt="glamping" loading="lazy" /></a>
+      <a href="images/western/grandcan1.JPG" data-lightbox="west-gallery"><img src="images/west/grandcan1.jpg" alt="grandcan1" loading="lazy" /></a>
+      <a href="images/western/grandcan2.JPG" data-lightbox="west-gallery"><img src="images/west/grandcan2.jpg" alt="grandcan2" loading="lazy" /></a>
+      <a href="images/western/grandcan4.JPG" data-lightbox="west-gallery"><img src="images/west/grandcan4.jpg" alt="grandcan4" loading="lazy" /></a>
+      <a href="images/western/horshoebend.JPG" data-lightbox="west-gallery"><img src="images/west/horshoebend.jpg" alt="horshoebend" loading="lazy" /></a>
+      <a href="images/western/kayakpic.jpg" data-lightbox="west-gallery"><img src="images/west/kayakpic.jpg" alt="kayakpic" loading="lazy" /></a>
+      <a href="images/western/longroad.JPG" data-lightbox="west-gallery"><img src="images/west/longroad.jpg" alt="longroad" loading="lazy" /></a>
+      <a href="images/western/me4.JPG" data-lightbox="west-gallery"><img src="images/west/me4.jpg" alt="me4" loading="lazy" /></a>
+      <a href="images/western/me5.JPG" data-lightbox="west-gallery"><img src="images/west/me5.jpg" alt="me5" loading="lazy" /></a>
+      <a href="images/western/mg2.JPG" data-lightbox="west-gallery"><img src="images/west/mg2.jpg" alt="mg2" loading="lazy" /></a>
+      <a href="images/western/mg3.JPG" data-lightbox="west-gallery"><img src="images/west/mg3.jpg" alt="mg3" loading="lazy" /></a>
+      <a href="images/western/monument.JPG" data-lightbox="west-gallery"><img src="images/west/monument.jpg" alt="monument" loading="lazy" /></a>
+      <a href="images/western/national.JPG" data-lightbox="west-gallery"><img src="images/west/national.jpg" alt="national" loading="lazy" /></a>
+      <a href="images/western/pacific1.JPG" data-lightbox="west-gallery"><img src="images/west/pacific1.jpg" alt="pacific1" loading="lazy" /></a>
+      <a href="images/western/pacific2.JPG" data-lightbox="west-gallery"><img src="images/west/pacific2.jpg" alt="pacific2" loading="lazy" /></a>
+      <a href="images/western/pacific3.JPG" data-lightbox="west-gallery"><img src="images/west/pacific3.jpg" alt="pacific3" loading="lazy" /></a>
+      <a href="images/western/pacific4.JPG" data-lightbox="west-gallery"><img src="images/west/pacific4.jpg" alt="pacific4" loading="lazy" /></a>
+      <a href="images/western/pacific5.JPG" data-lightbox="west-gallery"><img src="images/west/pacific5.jpg" alt="pacific5" loading="lazy" /></a>
+      <a href="images/western/pacific6.JPG" data-lightbox="west-gallery"><img src="images/west/pacific6.jpg" alt="pacific6" loading="lazy" /></a>
+      <a href="images/western/pacific7.JPG" data-lightbox="west-gallery"><img src="images/west/pacific7.jpg" alt="pacific7" loading="lazy" /></a>
+      <a href="images/western/rainbow.jpg" data-lightbox="west-gallery"><img src="images/west/rainbow.jpg" alt="rainbow" loading="lazy" /></a>
+      <a href="images/western/redwood1.jpg" data-lightbox="west-gallery"><img src="images/west/redwood1.jpg" alt="redwood1" loading="lazy" /></a>
+      <a href="images/western/redwood2.jpg" data-lightbox="west-gallery"><img src="images/west/redwood2.jpg" alt="redwood2" loading="lazy" /></a>
+      <a href="images/western/river.JPG" data-lightbox="west-gallery"><img src="images/west/river.jpg" alt="river" loading="lazy" /></a>
+      <a href="images/western/suguaro.JPG" data-lightbox="west-gallery"><img src="images/west/suguaro.jpg" alt="suguaro" loading="lazy" /></a>
+      <a href="images/western/teton1.JPG" data-lightbox="west-gallery"><img src="images/west/teton1.jpg" alt="teton1" loading="lazy" /></a>
+      <a href="images/western/teton2.JPG" data-lightbox="west-gallery"><img src="images/west/teton2.jpg" alt="teton2" loading="lazy" /></a>
+      <a href="images/western/teton3.JPG" data-lightbox="west-gallery"><img src="images/west/teton3.jpg" alt="teton3" loading="lazy" /></a>
+      <a href="images/western/teton4.JPG" data-lightbox="west-gallery"><img src="images/west/teton4.jpg" alt="teton4" loading="lazy" /></a>
+      <a href="images/western/theplanes.jpg" data-lightbox="west-gallery"><img src="images/west/theplanes.jpg" alt="theplanes" loading="lazy" /></a>
+      <a href="images/western/trex.JPG" data-lightbox="west-gallery"><img src="images/west/trex.jpg" alt="trex" loading="lazy" /></a>
+      <a href="images/western/truckinbadland.jpg" data-lightbox="west-gallery"><img src="images/west/truckinbadland.jpg" alt="truckinbadland" loading="lazy" /></a>
+      <a href="images/western/Utah.JPG" data-lightbox="west-gallery"><img src="images/west/Utah.jpg" alt="Utah" loading="lazy" /></a>
+      <a href="images/western/utah1.JPG" data-lightbox="west-gallery"><img src="images/west/utah1.jpg" alt="utah1" loading="lazy" /></a>
+      <a href="images/western/utah2.JPG" data-lightbox="west-gallery"><img src="images/west/utah2.jpg" alt="utah2" loading="lazy" /></a>
+      <a href="images/western/utah3.JPG" data-lightbox="west-gallery"><img src="images/west/utah3.jpg" alt="utah3" loading="lazy" /></a>
+      <a href="images/western/utah4.JPG" data-lightbox="west-gallery"><img src="images/west/utah4.jpg" alt="utah4" loading="lazy" /></a>
+      <a href="images/western/utah5.JPG" data-lightbox="west-gallery"><img src="images/west/utah5.jpg" alt="utah5" loading="lazy" /></a>
+      <a href="images/western/winter (1).JPG" data-lightbox="west-gallery"><img src="images/west/winter (1).jpg" alt="winter" loading="lazy" /></a>
+      <a href="images/western/yellowstone1.JPG" data-lightbox="west-gallery"><img src="images/west/yellowstone1.jpg" alt="yellowstone1" loading="lazy" /></a>
+      <a href="images/western/yellowstone2.JPG" data-lightbox="west-gallery"><img src="images/west/yellowstone2.jpg" alt="yellowstone2" loading="lazy" /></a>
+      <a href="images/western/yellowstone3.JPG" data-lightbox="west-gallery"><img src="images/west/yellowstone3.jpg" alt="yellowstone3" loading="lazy" /></a>
+      <a href="images/western/yellowstone4.JPG" data-lightbox="west-gallery"><img src="images/west/yellowstone4.jpg" alt="yellowstone4" loading="lazy" /></a>
+      <a href="images/western/yellowstone5.JPG" data-lightbox="west-gallery"><img src="images/west/yellowstone5.jpg" alt="yellowstone5" loading="lazy" /></a>
+      <a href="images/western/yellowstone6.JPG" data-lightbox="west-gallery"><img src="images/west/yellowstone6.jpg" alt="yellowstone6" loading="lazy" /></a>
+      <a href="images/western/yellowstone7.JPG" data-lightbox="west-gallery"><img src="images/west/yellowstone7.jpg" alt="yellowstone7" loading="lazy" /></a>
+      <a href="images/western/yellowstone8.JPG" data-lightbox="west-gallery"><img src="images/west/yellowstone8.jpg" alt="yellowstone8" loading="lazy" /></a>
+      <a href="images/western/yellowstone9.JPG" data-lightbox="west-gallery"><img src="images/west/yellowstone9.jpg" alt="yellowstone9" loading="lazy" /></a>
     </section>
     
   </main>
