--- a/itis3135/natureinshutterspeed/west_gallery.html
+++ b/itis3135/natureinshutterspeed/west_gallery.html
@@ -18,14 +18,13 @@
       <a href="images/western/ariz5.JPG" data-lightbox="west-gallery"><img src="images/west/ariz5.jpg" alt="ariz5" loading="lazy" /></a>
       <a href="images/western/ariz6.jpg" data-lightbox="west-gallery"><img src="images/west/ariz6.jpg" alt="ariz6" loading="lazy" /></a>
       <a href="images/western/arizss.JPG" data-lightbox="west-gallery"><img src="images/west/arizss.jpg" alt="arizss" loading="lazy" /></a>
-      <a href="images/western/badland1.JPG" data-lightbox="west-gallery"><img src="images/west/badland1.jpg" alt="badland1" loading="lazy" /></a>
+      <a href="images/western/badnland1.JPG" data-lightbox="west-gallery"><img src="images/west/badnland1.jpg" alt="badland1" loading="lazy" /></a>
       <a href="images/western/badland2.JPG" data-lightbox="west-gallery"><img src="images/west/badland2.jpg" alt="badland2" loading="lazy" /></a>
       <a href="images/western/badland3.JPG" data-lightbox="west-gallery"><img src="images/west/badland3.jpg" alt="badland3" loading="lazy" /></a>
       <a href="images/western/badland4.JPG" data-lightbox="west-gallery"><img src="images/west/badland4.jpg" alt="badland4" loading="lazy" /></a>
       <a href="images/western/badland5.jpg" data-lightbox="west-gallery"><img src="images/west/badland5.jpg" alt="badland5" loading="lazy" /></a>
       <a href="images/western/cooltrees.JPG" data-lightbox="west-gallery"><img src="images/west/cooltrees.jpg" alt="cooltrees" loading="lazy" /></a>
       <a href="images/western/field.jpg" data-lightbox="west-gallery"><img src="images/west/field.jpg" alt="field" loading="lazy" /></a>
-      <a href="images/western/glacier1.JPG" data-lightbox="west-gallery"><img src="images/west/glacier1.jpg" alt="glacier1" loading="lazy" /></a>
       <a href="images/western/glacier2.JPG" data-lightbox="west-gallery"><img src="images/west/glacier2.jpg" alt="glacier2" loading="lazy" /></a>
       <a href="images/western/glacier3.JPG" data-lightbox="west-gallery"><img src="images/west/glacier3.jpg" alt="glacier3" loading="lazy" /></a>
       <a href="images/western/glacier4.JPG" data-lightbox="west-gallery"><img src="images/west/glacier4.jpg" alt="glacier4" loading="lazy" /></a>
@@ -35,7 +34,6 @@
       <a href="images/western/grandcan2.JPG" data-lightbox="west-gallery"><img src="images/west/grandcan2.jpg" alt="grandcan2" loading="lazy" /></a>
       <a href="images/western/grandcan4.JPG" data-lightbox="west-gallery"><img src="images/west/grandcan4.jpg" alt="grandcan4" loading="lazy" /></a>
       <a href="images/western/horshoebend.JPG" data-lightbox="west-gallery"><img src="images/west/horshoebend.jpg" alt="horshoebend" loading="lazy" /></a>
-      <a href="images/western/kayakpic.jpg" data-lightbox="west-gallery"><img src="images/west/kayakpic.jpg" alt="kayakpic" loading="lazy" /></a>
       <a href="images/western/longroad.JPG" data-lightbox="west-gallery"><img src="images/west/longroad.jpg" alt="longroad" loading="lazy" /></a>
       <a href="images/western/me4.JPG" data-lightbox="west-gallery"><img src="images/west/me4.jpg" alt="me4" loading="lazy" /></a>
       <a href="images/western/me5.JPG" data-lightbox="west-gallery"><img src="images/west/me5.jpg" alt="me5" loading="lazy" /></a>
@@ -46,7 +44,6 @@
       <a href="images/western/pacific1.JPG" data-lightbox="west-gallery"><img src="images/west/pacific1.jpg" alt="pacific1" loading="lazy" /></a>
       <a href="images/western/pacific2.JPG" data-lightbox="west-gallery"><img src="images/west/pacific2.jpg" alt="pacific2" loading="lazy" /></a>
       <a href="images/western/pacific3.JPG" data-lightbox="west-gallery"><img src="images/west/pacific3.jpg" alt="pacific3" loading="lazy" /></a>
-      <a href="images/western/pacific4.JPG" data-lightbox="west-gallery"><img src="images/west/pacific4.jpg" alt="pacific4" loading="lazy" /></a>
       <a href="images/western/pacific5.JPG" data-lightbox="west-gallery"><img src="images/west/pacific5.jpg" alt="pacific5" loading="lazy" /></a>
       <a href="images/western/pacific6.JPG" data-lightbox="west-gallery"><img src="images/west/pacific6.jpg" alt="pacific6" loading="lazy" /></a>
       <a href="images/western/pacific7.JPG" data-lightbox="west-gallery"><img src="images/west/pacific7.jpg" alt="pacific7" loading="lazy" /></a>
