--- a/itis3135/natureinshutterspeed/review.html
+++ b/itis3135/natureinshutterspeed/review.html
@@ -2,6 +2,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <script src="https://lint.page/kit/4d0fe3.js" crossorigin="anonymous"></script>
   <title>Review - Nature In Shutter Speed</title>
   <link rel="stylesheet" href="styles/styles.css" />
 </head>
