--- a/itis3135/natureinshutterspeed/west_gallery.html
+++ b/itis3135/natureinshutterspeed/west_gallery.html
@@ -1,3 +1,4 @@
+<!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
@@ -66,7 +67,7 @@
       <a href="images/western/utah3.JPG" data-lightbox="west-gallery"><img src="images/west/utah3.jpg" alt="utah3" loading="lazy" /></a>
       <a href="images/western/utah4.JPG" data-lightbox="west-gallery"><img src="images/west/utah4.jpg" alt="utah4" loading="lazy" /></a>
       <a href="images/western/utah5.JPG" data-lightbox="west-gallery"><img src="images/west/utah5.jpg" alt="utah5" loading="lazy" /></a>
-      <a href="images/western/winter (1).JPG" data-lightbox="west-gallery"><img src="images/west/winter (1).jpg" alt="winter" loading="lazy" /></a>
+      <a href="images/western/winter.JPG" data-lightbox="west-gallery"><img src="images/west/winter.jpg" alt="winter" loading="lazy" /></a>
       <a href="images/western/yellowstone1.JPG" data-lightbox="west-gallery"><img src="images/west/yellowstone1.jpg" alt="yellowstone1" loading="lazy" /></a>
       <a href="images/western/yellowstone2.JPG" data-lightbox="west-gallery"><img src="images/west/yellowstone2.jpg" alt="yellowstone2" loading="lazy" /></a>
       <a href="images/western/yellowstone3.JPG" data-lightbox="west-gallery"><img src="images/west/yellowstone3.jpg" alt="yellowstone3" loading="lazy" /></a>
