--- a/itis3135/natureinshutterspeed/index.html
+++ b/itis3135/natureinshutterspeed/index.html
@@ -15,6 +15,7 @@
 
   <main>
     <section class="intro-images">
+      <h1>Homepage</h1>
       <a href="images/western/pacific4.JPG" data-lightbox="west-gallery"><img src="images/west/pacific4.jpg" alt="pacific4" loading="lazy" /></a>
       <a href="images/western/glacier1.JPG" data-lightbox="west-gallery"><img src="images/west/glacier1.JPG" alt="glacier1" loading="lazy" /></a>
     </section>
