--- a/itis3135/natureinshutterspeed/index.html
+++ b/itis3135/natureinshutterspeed/index.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <script src="https://lint.page/kit/4d0fe3.js" crossorigin="anonymous"></script>
   <title>Nature In Shutter Speed</title>
-  <link rel="stylesheet" href="styles/styles.css">
+  <link rel="stylesheet" href="styles/clean-styles.css">
   <link href="https://cdn.jsdelivr.net/npm/lightbox2@2/dist/css/lightbox.min.css" rel="stylesheet" />
 </head>
 <body>
