--- a/itis3135/byo_intro.html
+++ b/itis3135/byo_intro.html
@@ -53,16 +53,16 @@
   <input type="text" id="caption" name="caption" value="This is me exploring the mountains!" required>
 
   <label for="personal">Personal Background:</label>
-  <textarea id="personal" name="personal" rows="3" required>I'm an only child who was born and raised in Raleigh, North Carolina...</textarea>
+  <textarea id="personal" name="personal" rows="3" required> I'm an only child who was born and raised in Raleigh North Carolina, after living in rural Youngsville for the first 4 years of my life. I went to public schools my whole life and have always had a drive to make other people's day better.</textarea>
 
   <label for="professional">Professional Background:</label>
-  <textarea id="professional" name="professional" rows="3" required>I do not have a lot of experience in the workforce...</textarea>
+  <textarea id="professional" name="professional" rows="3" required> I do not have a lot of experience in the workforce as I have had quite an interesting past couple of years and certain circumstances made it hard for me to get a job. However I have lots of experience with doing charities and doing construction work with my father.</textarea>
 
   <label for="academic">Academic Background:</label>
-  <textarea id="academic" name="academic" rows="3" required>I graduated from my public high school in 2023...</textarea>
+  <textarea id="academic" name="academic" rows="3" required> I graduated from my public high school in 2023 and am currently a sophomore majoring in Computer science with a cyber security concentration who is on track to graduate a little earlier than the fall of 2027.</textarea>
 
   <label for="webDev">Background in Web Development:</label>
-  <textarea id="webDev" name="webDev" rows="3" required>I was a part of the coding club in elementary school...</textarea>
+  <textarea id="webDev" name="webDev" rows="3" required> I was a part of the coding club in elementary school and enjoyed learning cobra and applying it to robotic type applications, then once I was a senior in high school I took AP computer science. Once I started that class and learned java, I fell in love with coding and have run with it ever since. I'm Java certified and I have several years of coding experience. I also have some digital design certifications like photoshop and premiere pro.</textarea>
 
   <label for="platform">Primary Computer Platform:</label>
   <input type="text" id="platform" name="platform" value="Windows PC/Laptop" required>
@@ -72,12 +72,11 @@
   <button type="button" onclick="addCourse()">Add Course</button>
 
   <label for="funnyThing">Funny/Interesting Fact:</label>
-  <input type="text" id="funnyThing" name="funnyThing" value="I've been to all 48 continental states.">
+  <input type="text" id="funnyThing" name="funnyThing" value="I've been to all 48 of the “continental” states, just waiting to go see Alaska and Hawaii.">
 
-  <label>
     <input type="checkbox" id="agreement" name="agreement" required>
-    I understand that what is on this page is not password protected.
-  </label>
+    <label for="agreement">I understand that what is on this page is not password protected and I will not put anything here that I don’t want publicly available.</label>
+
 
   <input type="submit" value="Submit">
   <input type="reset" value="Reset">
