--- a/itis3135/byo_intro.html
+++ b/itis3135/byo_intro.html
@@ -43,14 +43,11 @@
   <input type="file" id="image" name="image" accept=".png, .jpg, .jpeg">
 
   <img id="preview" src="images/IMG_0693.jpeg" alt="Me In Japan">
-  <input type="text" id="caption" name="caption" value="Hanging out with Ancient Deer in Nara Japan" required>
-  <p id="captionPreview">Hanging out with Ancient Deer in Nara Japan</p>
-
   <label for="altText">Image Alt Text:</label>
-  <input type="text" id="altText" name="altText" value="Collin's photo" required>
+  <input type="text" id="altText" name="altText" value="Picture of me" required>
 
   <label for="caption">Image Caption:</label>
-  <input type="text" id="caption" name="caption" value="This is me exploring the mountains!" required>
+  <input type="text" id="caption" name="caption" value="Hanging out with Ancient Deer in Nara Japan" required>
 
   <label for="personal">Personal Background:</label>
   <textarea id="personal" name="personal" rows="3" required> I'm an only child who was born and raised in Raleigh North Carolina, after living in rural Youngsville for the first 4 years of my life. I went to public schools my whole life and have always had a drive to make other people's day better.</textarea>
