--- a/itis3135/byo_intro.html
+++ b/itis3135/byo_intro.html
@@ -19,7 +19,7 @@
 </header>
 
 <h2>BYO Intro</h2>
-<h3>Time to BYO your intro page! Fill out the form below.</h3>
+<h3>Time to BYO intro page! Fill out the form below.</h3>
 
 <form id="introForm">
   <div class="form-row">
@@ -42,7 +42,7 @@
   <label for="image">Upload Image (or keep existing one):</label>
   <input type="file" id="image" name="image" accept=".png, .jpg, .jpeg">
 
-  <img id="preview" src="images/IMG_0693.jpeg" alt="Me In Japan">
+  <img id="preview" src="images/intro.jpg" alt="Me In Japan">
   <label for="altText">Image Alt Text:</label>
   <input type="text" id="altText" name="altText" value="Picture of me" required>
 
