--- a/itis3135/introduction.html
+++ b/itis3135/introduction.html
@@ -13,7 +13,7 @@
 			<h2>Introduction</h2>
             <h2>Collin Gallagher || Carefree Goose</h2>
             <figure>
-                <img src="images/IMG_0693.jpeg" alt="Picture of me">
+                <img src="images/intro.jpg" alt="Picture of me">
                 <figcaption>Hanging out with Ancient Deer in Nara Japan</figcaption>
             </figure>
             <ul>
