--- a/itis3135/byo_intro.html
+++ b/itis3135/byo_intro.html
@@ -19,7 +19,7 @@
 </header>
 
 <h2>BYO Intro</h2>
-<h3>Time to BYO intro page! Fill out the form below.</h3>
+<h3 id="introPrompt">Time to BYO intro page! Fill out the form below.</h3>
 
 <form id="introForm">
   <div class="form-row">
