--- a/itis3135/slideshow.html
+++ b/itis3135/slideshow.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Slideshow Gallery</title>
-    <link rel="stylesheet" href="default.css">
+    <link rel="stylesheet" href="styles/default.css">
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
 
     <style>
