--- a/itis3135/slideshow.html
+++ b/itis3135/slideshow.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Slideshow Gallery</title>
-    <link rel="stylesheet" href="styles/default.css">
+    <link rel="stylesheet" href="default.css">
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
 
     <style>
@@ -62,16 +62,19 @@
             display: flex;
             justify-content: center;
             margin-top: 10px;
+            flex-wrap: wrap;
         }
 
         .column {
             flex: 0 0 auto;
-            width: 100px;
-            margin: 0 2px;
+            width: 80px;
+            margin: 2px;
         }
 
         .demo {
             opacity: 0.6;
+            width: 100%;
+            cursor: pointer;
         }
 
         .active, .demo:hover {
@@ -84,7 +87,6 @@
     <header>
         <div data-include="components/header.html"></div>
     </header>
-
     <main>
         <h1>Slideshow of My Name - Collin Gallagher</h1>
 
@@ -92,77 +94,77 @@
 
             <div class="mySlides">
                 <div class="numbertext">1 / 15</div>
-                <img src="images/c_cat.jpg" alt="C - Cat">
+                <img src="images/c_cat.jpg" style="width:100%" alt="C - Cat">
             </div>
 
             <div class="mySlides">
                 <div class="numbertext">2 / 15</div>
-                <img src="images/o_owl.jpg" alt="O - Owl">
+                <img src="images/o_owl.jpg" style="width:100%" alt="O - Owl">
             </div>
 
             <div class="mySlides">
                 <div class="numbertext">3 / 15</div>
-                <img src="images/l_lake.jpg" alt="L - Lake">
+                <img src="images/l_lake.jpg" style="width:100%" alt="L - Lake">
             </div>
 
             <div class="mySlides">
                 <div class="numbertext">4 / 15</div>
-                <img src="images/l_lantern.jpg" alt="L - Lantern">
+                <img src="images/l_lantern.jpg" style="width:100%" alt="L - Lantern">
             </div>
 
             <div class="mySlides">
                 <div class="numbertext">5 / 15</div>
-                <img src="images/i_icecream.jpg" alt="I - Ice Cream">
+                <img src="images/i_icecream.jpg" style="width:100%" alt="I - Ice Cream">
             </div>
 
             <div class="mySlides">
                 <div class="numbertext">6 / 15</div>
-                <img src="images/n_newyork.jpg" alt="N - New York">
+                <img src="images/n_newyork.jpg" style="width:100%" alt="N - New York">
             </div>
 
             <div class="mySlides">
                 <div class="numbertext">7 / 15</div>
-                <img src="images/g_giraffe.jpg" alt="G - Giraffe">
+                <img src="images/g_giraffe.jpg" style="width:100%" alt="G - Giraffe">
             </div>
 
             <div class="mySlides">
                 <div class="numbertext">8 / 15</div>
-                <img src="images/a_airplane.jpg" alt="A - Airplane">
+                <img src="images/a_airplane.jpg" style="width:100%" alt="A - Airplane">
             </div>
 
             <div class="mySlides">
                 <div class="numbertext">9 / 15</div>
-                <img src="images/l_leaf.jpg" alt="L - Leaf">
+                <img src="images/l_leaf.jpg" style="width:100%" alt="L - Leaf">
             </div>
 
             <div class="mySlides">
                 <div class="numbertext">10 / 15</div>
-                <img src="images/l_lighthouse.jpg" alt="L - Lighthouse">
+                <img src="images/l_lighthouse.jpg" style="width:100%" alt="L - Lighthouse">
             </div>
 
             <div class="mySlides">
                 <div class="numbertext">11 / 15</div>
-                <img src="images/a_albino.jpg" alt="A - Albino Peacock">
+                <img src="images/a_albino.jpg" style="width:100%" alt="A - Albino Peacock">
             </div>
 
             <div class="mySlides">
                 <div class="numbertext">12 / 15</div>
-                <img src="images/g_guitar.jpg" alt="G - Guitar">
+                <img src="images/g_guitar.jpg" style="width:100%" alt="G - Guitar">
             </div>
 
             <div class="mySlides">
                 <div class="numbertext">13 / 15</div>
-                <img src="images/h_hamburger.jpg" alt="H - Hamburger">
+                <img src="images/h_hamburger.jpg" style="width:100%" alt="H - Hamburger">
             </div>
 
             <div class="mySlides">
                 <div class="numbertext">14 / 15</div>
-                <img src="images/e_evergreen.jpg" alt="E - Evergreen">
+                <img src="images/e_evergreen.jpg" style="width:100%" alt="E - Evergreen">
             </div>
 
             <div class="mySlides">
                 <div class="numbertext">15 / 15</div>
-                <img src="images/r_rainbow.jpg" alt="R - Rainbow">
+                <img src="images/r_rainbow.jpg" style="width:100%" alt="R - Rainbow">
             </div>
 
             <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
@@ -174,53 +176,55 @@
 
             <div class="row">
                 <div class="column">
-                    <img class="demo cursor" src="images/c_cat.jpg" style="width:100%" onclick="currentSlide(1)" alt="C - Cat">
+                    <img class="demo cursor" src="images/c_cat.jpg" onclick="currentSlide(1)" alt="C - Cat">
                 </div>
                 <div class="column">
-                    <img class="demo cursor" src="images/o_owl.jpg" style="width:100%" onclick="currentSlide(2)" alt="O - Owl">
+                    <img class="demo cursor" src="images/o_owl.jpg" onclick="currentSlide(2)" alt="O - Owl">
                 </div>
                 <div class="column">
-                    <img class="demo cursor" src="images/l_lake.jpg" style="width:100%" onclick="currentSlide(3)" alt="L - Lake">
+                    <img class="demo cursor" src="images/l_lake.jpg" onclick="currentSlide(3)" alt="L - Lake">
                 </div>
                 <div class="column">
-                    <img class="demo cursor" src="images/l_lantern.jpg" style="width:100%" onclick="currentSlide(4)" alt="L - Lantern">
+                    <img class="demo cursor" src="images/l_lantern.jpg" onclick="currentSlide(4)" alt="L - Lantern">
                 </div>
                 <div class="column">
-                    <img class="demo cursor" src="images/i_icecream.jpg" style="width:100%" onclick="currentSlide(5)" alt="I - Ice Cream">
+                    <img class="demo cursor" src="images/i_icecream.jpg" onclick="currentSlide(5)" alt="I - Ice Cream">
                 </div>
                 <div class="column">
-                    <img class="demo cursor" src="images/n_newyork.jpg" style="width:100%" onclick="currentSlide(6)" alt="N - New York">
+                    <img class="demo cursor" src="images/n_newyork.jpg" onclick="currentSlide(6)" alt="N - New York">
                 </div>
                 <div class="column">
-                    <img class="demo cursor" src="images/g_giraffe.jpg" style="width:100%" onclick="currentSlide(7)" alt="G - Giraffe">
+                    <img class="demo cursor" src="images/g_giraffe.jpg" onclick="currentSlide(7)" alt="G - Giraffe">
                 </div>
                 <div class="column">
-                    <img class="demo cursor" src="images/a_airplane.jpg" style="width:100%" onclick="currentSlide(8)" alt="A - Airplane">
+                    <img class="demo cursor" src="images/a_airplane.jpg" onclick="currentSlide(8)" alt="A - Airplane">
                 </div>
                 <div class="column">
-                    <img class="demo cursor" src="images/l_leaf.jpg" style="width:100%" onclick="currentSlide(9)" alt="L - Leaf">
+                    <img class="demo cursor" src="images/l_leaf.jpg" onclick="currentSlide(9)" alt="L - Leaf">
                 </div>
                 <div class="column">
-                    <img class="demo cursor" src="images/l_lighthouse.jpg" style="width:100%" onclick="currentSlide(10)" alt="L - Lighthouse">
+                    <img class="demo cursor" src="images/l_lighthouse.jpg" onclick="currentSlide(10)" alt="L - Lighthouse">
                 </div>
                 <div class="column">
-                    <img class="demo cursor" src="images/a_albino.jpg" style="width:100%" onclick="currentSlide(11)" alt="A - Albino Peacock">
+                    <img class="demo cursor" src="images/a_albino.jpg" onclick="currentSlide(11)" alt="A - Albino Peacock">
                 </div>
                 <div class="column">
-                    <img class="demo cursor" src="images/g_guitar.jpg" style="width:100%" onclick="currentSlide(12)" alt="G - Guitar">
+                    <img class="demo cursor" src="images/g_guitar.jpg" onclick="currentSlide(12)" alt="G - Guitar">
                 </div>
                 <div class="column">
-                    <img class="demo cursor" src="images/h_hamburger.jpg" style="width:100%" onclick="currentSlide(13)" alt="H - Hamburger">
+                    <img class="demo cursor" src="images/h_hamburger.jpg" onclick="currentSlide(13)" alt="H - Hamburger">
                 </div>
                 <div class="column">
-                    <img class="demo cursor" src="images/e_evergreen.jpg" style="width:100%" onclick="currentSlide(14)" alt="E - Evergreen">
+                    <img class="demo cursor" src="images/e_evergreen.jpg" onclick="currentSlide(14)" alt="E - Evergreen">
                 </div>
                 <div class="column">
-                    <img class="demo cursor" src="images/r_rainbow.jpg" style="width:100%" onclick="currentSlide(15)" alt="R - Rainbow">
+                    <img class="demo cursor" src="images/r_rainbow.jpg" onclick="currentSlide(15)" alt="R - Rainbow">
                 </div>
             </div>
+
         </div>
     </main>
+    
     <footer>
         <div data-include="components/footer.html"></div>
     </footer>
