--- a/itis3135/slideshow.html
+++ b/itis3135/slideshow.html
@@ -229,6 +229,6 @@
         <div data-include="components/footer.html"></div>
     </footer>
     <script src="scripts/HTMLInclude.js"></script>
-    <script src="js/slideshow.js"></script>
+    <script src="scripts/slideshow.js"></script>
 </body>
 </html>
