--- a/itis3135/slideshow.html
+++ b/itis3135/slideshow.html
@@ -37,7 +37,7 @@
             width: auto;
             padding: 16px;
             margin-top: -22px;
-            color: black;
+            color: crimson;
             font-weight: bold;
             font-size: 24px;
             user-select: none;
@@ -159,7 +159,7 @@
 
             <div class="mySlides">
                 <div class="numbertext">14 / 15</div>
-                <img src="images/e_evergreen.jpg" style="width:100%" alt="E - Evergreen">
+                <img src="images/e_evergreen.jpg" style="width:100%" alt="E - Evergreen forest">
             </div>
 
             <div class="mySlides">
